--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -3,9 +3,11 @@ on:
   release:
     types: [published]
 jobs:
-  run-build-and-deploy:
-    uses: octopusden/octopus-base/.github/workflows/common-py-build-deploy.yml@main
-    with:
-      process_env: Prod
-      python_versions: "3"
-    secrets: inherit
+  build-push-docker-image:
+      uses: octopusden/octopus-base/.github/workflows/common-docker-build-deploy.yml@main
+      with:
+        build-args: |
+          PYTHON_VERSION=3.12
+        tags: |
+          ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+          ghcr.io/${{ github.repository }}:latest
